--- a/test8.ipynb
+++ b/test8.ipynb
@@ -475,11 +475,258 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "1798de24",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+-----+------+------+\n",
+      "|order_id|color| fruit|amount|\n",
+      "+--------+-----+------+------+\n",
+      "|       1|  red|banana|    10|\n",
+      "|       2| blue|banana|    20|\n",
+      "|       3|  red|carrot|    30|\n",
+      "|       4| blue|carrot|    40|\n",
+      "|       5|  red|carrot|    50|\n",
+      "|       6|black|carrot|    60|\n",
+      "|       7|  red|banana|    70|\n",
+      "|       8|  red|carrot|    80|\n",
+      "+--------+-----+------+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = spark.createDataFrame([\n",
+    "    [1, 'red', 'banana', 10],\n",
+    "    [2, 'blue', 'banana', 20],\n",
+    "    [3, 'red', 'carrot', 30],\n",
+    "    [4, 'blue', 'carrot', 40],\n",
+    "    [5, 'red', 'carrot', 50],\n",
+    "    [6, 'black', 'carrot', 60],\n",
+    "    [7, 'red', 'banana', 70],\n",
+    "    [8, 'red', 'carrot', 80]],\n",
+    "    schema = ['order_id', 'color', 'fruit', 'amount'])\n",
+    "df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "be6a8c6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+-----------+\n",
+      "| fruit|sum(amount)|\n",
+      "+------+-----------+\n",
+      "|banana|        100|\n",
+      "|carrot|        260|\n",
+      "+------+-----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.groupby('fruit').agg({'amount': 'sum'}).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "6d2984a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+-----+------+------+-----+\n",
+      "|order_id|color| fruit|amount|total|\n",
+      "+--------+-----+------+------+-----+\n",
+      "|       1|  red|banana|    10|  240|\n",
+      "|       3|  red|carrot|    30|  240|\n",
+      "|       5|  red|carrot|    50|  240|\n",
+      "|       7|  red|banana|    70|  240|\n",
+      "|       8|  red|carrot|    80|  240|\n",
+      "|       6|black|carrot|    60|   60|\n",
+      "|       2| blue|banana|    20|   60|\n",
+      "|       4| blue|carrot|    40|   60|\n",
+      "+--------+-----+------+------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def pandas_func(pd_df):\n",
+    "    pd_df['total'] = pd_df['amount'].sum()\n",
+    "    return pd_df\n",
+    "\n",
+    "schema = 'order_id long, color string, fruit string, amount long, total long'\n",
+    "df.groupby('color').applyInPandas(pandas_func, schema=schema).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "9453c847",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df1 = spark.createDataFrame([[1, 'tony'], [2, 'jack'], [3, 'mike'], [4, 'rose']],\n",
+    "                            schema=['id', 'name'])\n",
+    "\n",
+    "df2 = spark.createDataFrame([[1,'二班'],[2,'三班']], schema=['id', 'class'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "481697ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+----+-----+\n",
+      "| id|name|class|\n",
+      "+---+----+-----+\n",
+      "|  1|tony| 二班|\n",
+      "|  3|mike| null|\n",
+      "|  2|jack| 三班|\n",
+      "|  4|rose| null|\n",
+      "+---+----+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def left_join(df_left, df_right):\n",
+    "    return pd.merge(df_left, df_right, how='left', on='id')\n",
+    "\n",
+    "schema = 'id int, name string, class string'\n",
+    "df1.groupby('id').cogroup(df2.groupby('id')).applyInPandas(left_join, schema=schema).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "c024e7ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CSV简单易用， Parquet和ORC是高性能的文件格式，读写速度更快\n",
+    "# pyspark能读取的数据源还有JDBC、text、binaryFil Avro等"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "807fc8ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+\n",
+      "|count(1)|\n",
+      "+--------+\n",
+      "|       8|\n",
+      "+--------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.createOrReplaceTempView('tableA')\n",
+    "spark.sql('select count(*) from tableA').show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "bac72c56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+\n",
+      "|pandas_func(amount)|\n",
+      "+-------------------+\n",
+      "|                1.0|\n",
+      "|                2.0|\n",
+      "|                3.0|\n",
+      "|                4.0|\n",
+      "|                5.0|\n",
+      "|                6.0|\n",
+      "|                7.0|\n",
+      "|                8.0|\n",
+      "+-------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "@pandas_udf('float')\n",
+    "def pandas_func(col: pd.Series) -> pd.Series:\n",
+    "    return col * 0.1\n",
+    "\n",
+    "spark.udf.register('pandas_func', pandas_func) # 取名 \n",
+    "spark.sql('select pandas_func(amount) from tableA').show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "69cdb812",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rdd = sc.parallelize(['hello world', 'hello python', 'hello hadoop', 'hello hive'])\n",
+    "rdd_word = rdd.flatMap(lambda x:x.split(' '))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "647be604",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['hello', 'world', 'hello', 'python', 'hello', 'hadoop', 'hello', 'hive']"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rdd_word.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0f4416b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rdd_one = rdd_word.map(lambda x: (x,1))\n",
+    "rdd_count = r"
+   ]
   }
  ],
  "metadata": {
