--- a/heima_sql.ipynb
+++ b/heima_sql.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "124425b2",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "9a188bfc",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "fd183ef3",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "ce9b61fe",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "4c9ced57",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "10c5da45",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "c24235d6",
    "metadata": {},
    "outputs": [],
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "8fb1c172",
    "metadata": {},
    "outputs": [],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "ee9fa5ca",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "3d979874",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "cc373a1b",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "b29b18b5",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "id": "4c58c685",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "id": "9c40d838",
    "metadata": {},
    "outputs": [],
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "id": "86a2299a",
    "metadata": {},
    "outputs": [],
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "id": "7003b044",
    "metadata": {},
    "outputs": [],
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "id": "25bcea64",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "id": "b19d2298",
    "metadata": {},
    "outputs": [],
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "id": "9a05853e",
    "metadata": {},
    "outputs": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 22,
    "id": "79edcf66",
    "metadata": {},
    "outputs": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 23,
    "id": "1cd974c5",
    "metadata": {},
    "outputs": [],
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 24,
    "id": "8383695f",
    "metadata": {},
    "outputs": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 25,
    "id": "e80fab29",
    "metadata": {},
    "outputs": [
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 26,
    "id": "b6f5f572",
    "metadata": {},
    "outputs": [
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 27,
    "id": "90267d00",
    "metadata": {},
    "outputs": [
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 28,
    "id": "9891b05e",
    "metadata": {},
    "outputs": [
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 29,
    "id": "2e50accc",
    "metadata": {},
    "outputs": [
@@ -578,57 +578,374 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e7f17228",
+   "metadata": {},
+   "source": [
+    "# word count demo"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "65947b6a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from pyspark.sql import functions as F"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "9c86e7ab",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rdd = sc.textFile('./words.txt').flatMap(lambda x: x.split(\" \")).map(lambda x: [x])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "737f993c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = rdd.toDF([\"word\"])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "d67ccae4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.createTempView(\"words\") # SQL风格"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "123ccfea",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+---+\n",
+      "|  word|cnt|\n",
+      "+------+---+\n",
+      "| hello|  3|\n",
+      "| flink|  1|\n",
+      "| spark|  1|\n",
+      "|hadoop|  1|\n",
+      "+------+---+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spark.sql(\"SELECT word, COUNT(*) AS cnt FROM words GROUP BY word ORDER BY cnt DESC\").show()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "183919c8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# DSL风格\n",
+    "df = spark.read.format(\"text\").load(\"./words.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "fa4a8016",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# withColumn方法\n",
+    "df2 = df.withColumn(\"value\", F.explode(F.split(df['value'], \" \")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "bb9df52a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+-----+\n",
+      "|  word|count|\n",
+      "+------+-----+\n",
+      "| hello|    3|\n",
+      "| flink|    1|\n",
+      "| spark|    1|\n",
+      "|hadoop|    1|\n",
+      "+------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df2.groupBy(\"value\").count().withColumnRenamed(\"value\", \"word\").\\\n",
+    "    orderBy(\"count\", ascending=False).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9a0d1fe",
+   "metadata": {},
+   "source": [
+    "# 电影评分案例"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "5d31316b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "schema=StructType().add(\"user_id\", IntegerType(), False).add(\"movie_id\", IntegerType(), False).\\\n",
+    "    add(\"rank\", IntegerType(), False).add(\"ts\", StringType(), False)\n",
+    "df = spark.read.format(\"csv\").schema(schema=schema).option(\"header\", False).\\\n",
+    "    option(\"encoding\", \"utf-8\").option(\"sep\", \"\\t\").load(\"./u.data\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "760c234b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+--------+\n",
+      "|user_id|avg_rank|\n",
+      "+-------+--------+\n",
+      "|    849|    4.87|\n",
+      "|    688|    4.83|\n",
+      "|    507|    4.72|\n",
+      "|    628|     4.7|\n",
+      "|    928|    4.69|\n",
+      "+-------+--------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TODO:用户的平均分\n",
+    "df.groupBy(\"user_id\").avg(\"rank\").withColumnRenamed(\"avg(rank)\", \"avg_rank\").\\\n",
+    "        withColumn(\"avg_rank\", F.round(\"avg_rank\", 2)).orderBy(\"avg_rank\",ascending=False).show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "043e9080",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+--------+\n",
+      "|movie_id|avg_rank|\n",
+      "+--------+--------+\n",
+      "|    1122|     5.0|\n",
+      "|    1500|     5.0|\n",
+      "|    1201|     5.0|\n",
+      "|    1653|     5.0|\n",
+      "+--------+--------+\n",
+      "only showing top 4 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TODO:电影的平均分查询,采用SQL风格 --> SQL一步到位，需要很熟悉\n",
+    "df.createOrReplaceTempView(\"movie\")\n",
+    "spark.sql(\"SELECT movie_id, ROUND(AVG(rank), 2) AS avg_rank FROM movie GROUP BY movie_id ORDER BY avg_rank DESC\").show(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "8db9f242",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55375"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# TODO:查询大于电影平均分的数量\n",
+    "df.where(df['rank'] > df.select(F.avg(df['rank'])).first()['avg(rank)']).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "319d40c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "450"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# TODO：查询大于3分电影中，打分次数最多的用户，此人打分的平均分\n",
+    "df.where(df[\"rank\"]>3).groupBy(\"user_id\").count().orderBy(\"count\", ascending=False).first()['user_id']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "5d2e35b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+\n",
+      "|round(avg(rank), 2)|\n",
+      "+-------------------+\n",
+      "|               3.86|\n",
+      "+-------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 计算这个人的打分平均分\n",
+    "df.filter(df['user_id']==450).select(F.round(F.avg(\"rank\"), 2)).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "ef6ba4c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+--------+--------+--------+\n",
+      "|user_id|avg_rank|min_rank|max_rank|\n",
+      "+-------+--------+--------+--------+\n",
+      "|    148|     4.0|       1|       5|\n",
+      "|    463|    2.86|       1|       5|\n",
+      "|    471|    3.39|       1|       5|\n",
+      "|    496|    3.03|       1|       5|\n",
+      "+-------+--------+--------+--------+\n",
+      "only showing top 4 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TODO:查询每个用户的平均打分，最低打分，最高打分\n",
+    "df.groupBy(\"user_id\").\\\n",
+    "    agg(\n",
+    "        F.round(F.avg(\"rank\"), 2).alias(\"avg_rank\"),\n",
+    "        F.min(\"rank\").alias(\"min_rank\"),\n",
+    "        F.max(\"rank\").alias(\"max_rank\")\n",
+    "    ).show(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "93850691",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+---+--------+\n",
+      "|movie_id|cnt|avg_rank|\n",
+      "+--------+---+--------+\n",
+      "|     408|112|    4.49|\n",
+      "|     169|118|    4.47|\n",
+      "|     318|298|    4.47|\n",
+      "|     483|243|    4.46|\n",
+      "|      64|283|    4.45|\n",
+      "+--------+---+--------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TODO:查询评分超过100次的电影的平均分\n",
+    "df.groupBy(\"movie_id\").\\\n",
+    "    agg(\n",
+    "        F.count(\"movie_id\").alias(\"cnt\"),\n",
+    "        F.round(F.avg(\"rank\"), 2).alias(\"avg_rank\")\n",
+    "    ).where(\"cnt > 100\").orderBy(\"avg_rank\", ascending=False).\\\n",
+    "    show(5)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa4a8016",
+   "id": "ed072476",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "1、agg函数：它是GroupData对象的API，作用是可以在里面写多个聚合；\n",
+    "2、alias：它是Column对象的API可以对一个列进行改名；\n",
+    "3、withColumnRenamed：它是DataFrame的API，可以对DF中的列进行改名；与alias不同\n",
+    "4、orderBy：DataFrame的API，对DF进行排序；\n",
+    "5、first：DataFrame的API，取出第一行，返回Row对象；\n",
+    "# Row对象可通过row['列名']来取出当前行中，某一列的具体数值；\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "291f2381",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 统一API数据写出\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfd95330",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -636,7 +953,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb9df52a",
+   "id": "869beef5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b0d6439",
    "metadata": {},
    "outputs": [],
    "source": []
